# minifactory-hackathon

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  arm_dashboard.py  camera_lock.py  car_dashboard.py  drive_dashboard.py  inference_handshake.py  main.py  make_viewer.py  merge_datasets.py  oak_camera.py  oak_lerobot_camera.py  phone_camera.py  policy_inference.py  pyproject.toml  record_dataset.py  recording.py  reencode_dataset_videos.py  run_policy_server.py  run_robot_client.py  run_tunnel.py  upload_cached_dataset.py
calibration/: so101_follower.json  so101_leader.json
carlink/: __init__.py  car.py  gateway.py  policy.py  sim.py  util.py  wifi.py
deploy/: inventory.ini  playbook.yml
docs/: arms.md  cameras.md  car.md  datasets.md  inference.md  orchestrator.md
firmware/: PROMPT.md  build_car_speaker.py
firmware/minimal_wifi/: platformio.ini
firmware/minimal_wifi/src/: main.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  DatasetsTab.tsx  RecordTab.tsx  api.ts  components.tsx  index.css  types.ts
orchestrator/: __init__.py  __main__.py  core.py  interfaces.py  mocks.py
scripts/: atech_gateway.py  atech_probe.py  check_phone_stream.py
