[project]
name = "minifactory-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "lerobot[feetech,grpcio-dep,smolvla]>=0.5.1",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "torch>=2.10.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "ruff>=0.15.16",
]
